--- a/example.ipynb
+++ b/example.ipynb
@@ -967,14 +967,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['python', 'world']\n"
+      "['1', '2', '3', 'python', '10.5']\n"
      ]
     }
    ],
@@ -996,14 +996,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['10', '20', [100, 200, 300, ['Python']]]\n"
+      "['400', '500', [100, 200, 300, ['Python']]]\n"
      ]
     }
    ],
@@ -1056,16 +1056,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 2, [3, 4, 5, 6]]"
+       "[0, 1, 2, 3, 4, 5, 6]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,7 +1073,7 @@
    "source": [
     "list=[0,1,2]\n",
     "\n",
-    "list.append([3,4,5,6])\n",
+    "list.extend([3,4,5,6])\n",
     "\n",
     "list"
    ]
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1125,21 +1125,17 @@
      "output_type": "stream",
      "text": [
       "[1, 2, 3, 4, 5, 4, 6]\n",
-      "1\n",
-      "3\n",
-      "5\n",
-      "6\n",
-      "[2, 4, 4]\n"
+      "[1, 2, 3, 4, 5, 4]\n"
      ]
     }
    ],
    "source": [
     "list1=[1,2,3,4,5,4,6]\n",
     "print(list1)\n",
-    "\n",
-    "for a in list1:\n",
-    "    print(a)\n",
-    "    list1.remove(a)\n",
+    "list1.remove(6)\n",
+    "# for a in list1:\n",
+    "    # print(a)\n",
+    "    # list1.remove(a)\n",
     "\n",
     "print(list1)"
    ]
@@ -1154,23 +1150,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[1, 3, 4, 5]"
+       "[2, 3, 4, 5]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,12 +1174,132 @@
    "source": [
     "list1= [1,2,3,4,5]\n",
     "\n",
-    "returnvalue = list1.pop(-4)\n",
+    "returnvalue = list1.pop(-5)\n",
     "\n",
     "print(returnvalue)\n",
     "\n",
     "list1\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "slice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1= [1,2,3,4,5,6]\n",
+    "#      -5      -1\n",
+    "val=list1[1::2]\n",
+    "print(val)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "t1 = ('Python world',(30,'Python'),10)\n",
+    "print(t1[-2][-1])\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Slicing and reversing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nhy\n"
+     ]
+    }
+   ],
+   "source": [
+    "t1=(\"Hello to python World\")\n",
+    "\n",
+    "print(t1[14:8:-2])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "deleting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6)\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 't1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[72], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(t1)\n\u001b[0;32m      3\u001b[0m \u001b[39mdel\u001b[39;00m t1\n\u001b[1;32m----> 4\u001b[0m \u001b[39mprint\u001b[39m(t1)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 't1' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "t1= (1,2,3,4,5,6)\n",
+    "print(t1)\n",
+    "del t1\n",
+    "print(t1)"
    ]
   }
  ],
