--- a/example.ipynb
+++ b/example.ipynb
@@ -1301,6 +1301,236 @@
     "del t1\n",
     "print(t1)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "snl WriyeohdPt"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = set(\"Python is on the World\")\n",
+    "for i in s1:\n",
+    "    print(i,end='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n",
+      "{2, 3}\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Set changed size during iteration",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[58], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m s1\u001b[39m=\u001b[39m{\u001b[39m10\u001b[39m,\u001b[39m2\u001b[39m,\u001b[39m3\u001b[39m}\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mtype\u001b[39m(s1))\n\u001b[1;32m----> 3\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m s1:\n\u001b[0;32m      4\u001b[0m     s1\u001b[39m.\u001b[39mremove(\u001b[39m10\u001b[39m)\n\u001b[0;32m      5\u001b[0m     \u001b[39mprint\u001b[39m(s1)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Set changed size during iteration"
+     ]
+    }
+   ],
+   "source": [
+    "s1={10,2,3}\n",
+    "for i in s1:\n",
+    "    s1.remove(10)\n",
+    "    print(s1)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 5, 6, 7, 8, 9}\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1={6,7,8}\n",
+    "\n",
+    "s1.add(9)\n",
+    "\n",
+    "for i in range(1,7,2):\n",
+    "    s1.add(i)\n",
+    "print(s1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2: 'Second Value', 1: 'First'}\n",
+      "{1: 100, 'Email': {'e1': 'keonicsx@gmail.com', 'e2': 'python@gmail.com'}, 'List1': [1, 2, 4]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "d1 = {1: 100, \"Email\": {\"e1\":\"keonicsx@gmail.com\",\"e2\":\"python@gmail.com\"}, \"List1\": [1, 2, 4]}\n",
+    "d2={2:\"Second Value\"}\n",
+    "d2[1]=\"First\"\n",
+    "print(d2)\n",
+    "\n",
+    "d2[10]=\"It is updated to 10\"\n",
+    "print(d1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'A', 2: 'B', 3: 'C'}\n",
+      "{2: 'B', 3: 'C'}\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'dic' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[33], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m(dic)\n\u001b[0;32m      5\u001b[0m \u001b[39mdel\u001b[39;00m(dic)\n\u001b[1;32m----> 6\u001b[0m \u001b[39mprint\u001b[39m(dic)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dic' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "dic={1:\"A\",2:\"B\",3:\"C\"}\n",
+    "print(dic)\n",
+    "del(dic[1])\n",
+    "print(dic)\n",
+    "del(dic)\n",
+    "print(dic)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "x='A'\n",
+    "y='A'\n",
+    "z='A'\n",
+    "ans = not z is y\n",
+    "#       true   and     false  = false\n",
+    "\n",
+    "print(ans)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "x='C'\n",
+    "y=['A','B','D']\n",
+    "z='A'\n",
+    "ans = x not in y\n",
+    "print(ans)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "else  [200, 4, 4, 7, 99]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=False\n",
+    "i=0\n",
+    "l1=[1,200,350,4,5,4,6,7,899,99]\n",
+    "\n",
+    "if a:\n",
+    "    print(\"True\",l1[::2])\n",
+    "else:\n",
+    "    print(\"else \",l1[1::2])"
+   ]
   }
  ],
  "metadata": {
