--- a/Module2.ipynb
+++ b/Module2.ipynb
@@ -194,6 +194,78 @@
     "\n",
     "ans(3)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi there am from python program\n",
+      "Hi All\n"
+     ]
+    }
+   ],
+   "source": [
+    "# file1= open(\"new_file.txt\",\"w\")\n",
+    "# file1.write(\"Hi there am from python program\")\n",
+    "# file1.close()\n",
+    "\n",
+    "file1= open(\"new_file.txt\",\"r\")\n",
+    "print(file1.read())\n",
+    "file1.close()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1=[1,2,3,4]\n",
+    "\n",
+    "iterator_obj=iter(list1)\n",
+    "next(iterator_obj)\n",
+    "next(iterator_obj)\n",
+    "print(next(iterator_obj))\n",
+    "print(next(iterator_obj))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'P'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string1=\"Python\"\n",
+    "Iter1=iter(string1)\n",
+    "next(Iter1)"
+   ]
   }
  ],
  "metadata": {
